started aligning correctly

--- a/css/main.css
+++ b/css/main.css
@@ -6,27 +6,33 @@ h1 {
 
 a {
   text-decoration: none;
-  list-style-type: none;
 }
 
 nav {
   width: 100%;
   height: 50px;
+  margin: 0px auto;
 }
-
+ul {
+  border: 3px solid red;
+  overflow: hidden;
+  width: 600px;
+  margin: 0px auto;
+}
 li {
   display: inline;
   float: left;
-  margin: 5px 20px 5px 20px;
+  margin: 5px 20px;
   text-align: center;
 
 }
 
 .logo {
   display: block;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0px auto;
   width: 25%;
+
+
 }
 
 .nav-menu {
